[package]
name = "imsz"
version = "0.2.0"
authors = [
    "Paulo Scardine <paulo@scardine.com.br>",
    "Mathias Panzenböck <grosser.meister.morti@gmx.net>"
]
edition = "2018"

[lib]
name = "imsz"
path = "src/lib.rs"

[features]
build-binary = ["argparse"]

[[bin]]
name = "imsz"
path = "src/bin/bin.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
argparse = { version = "0.2.2", optional = true }
