[package]
name = "imsz"
version = "0.2.0"
authors = [
    "Paulo Scardine <paulo@scardine.com.br>",
    "Mathias Panzenböck <grosser.meister.morti@gmx.net>"
]
edition = "2021"

[lib]
name = "imsz"
path = "src/lib.rs"

[features]
build-binary = ["clap"]

[[bin]]
name = "imsz"
path = "src/bin/bin.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
clap = { version = "3.1.8", features = ["derive"], optional = true }
